--- a/Desafio/Desafio/Views/Exames/Index.cshtml
+++ b/Desafio/Desafio/Views/Exames/Index.cshtml
@@ -21,7 +21,7 @@
                             <tr>
                                 <th width="40%">Nome</th>
                                 <th width="40%">Descrição</th>
-                                <th width="20%" class="text-center">Ações</thwidth="30%">
+                                <th width="20%" class="text-center">Ações</th>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
