--- a/Desafio/Desafio/Views/Home/Index.cshtml
+++ b/Desafio/Desafio/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
                                 <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                     Consultas
                                 </div>
-                                <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.Consulta</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.Consultas</div>
                             </div>
                             <div class="col-auto">
                                 <i class="fas fa-stethoscope fa-2x text-gray-300"></i>
